# vidcomp

./: __init__.py  pyproject.toml  vidcomp.py
js/: vidcomp.js
