[project]
name = "vidcomp"
version = "0.0.1"
description = "Video Comparer node for ComfyUI. Compares two input videos side by side or top and bottom, allowing to easily spot differences between them. Supports various video formats and customizable split options."
authors = [
  {name = "SubZero", email = "subzeropl@gmail.com"}
]
readme = "README.md"
license = {text = "Not open source"}
requires-python = ">=3.10"
classifiers = []
dependencies = []

[tool.comfy]
PublisherId = "SubZeroPL"
DisplayName = "vidcomp"
Icon = ""
Tags = []
Repository = "https://github.com/SubZeroPL/vidcomp"
includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = false
